// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket quote endpoint should return success 1`] = `
{
  "data": {
    "ask_price": 172,
    "ask_volume": 100,
    "bid_price": 170,
    "bid_volume": 148,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
  },
}
`;

exports[`websocket stock endpoint should return success 1`] = `
{
  "data": {
    "result": 462.19,
  },
  "result": 462.19,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
  },
}
`;
